tests/machine/x/c/cast_struct.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/cast_struct.c:69:3: error: conflicting types for ‘Todo’; have ‘struct <anonymous>’
   69 | } Todo;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/cast_struct.c:65:21: note: previous declaration of ‘Todo’ with type ‘Todo’
   65 | typedef struct Todo Todo;
      |                     ^~~~
/workspace/mochi/tests/machine/x/c/cast_struct.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/cast_struct.c:73:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   73 |   map_int_bool_put(&_t1, "title", "hi");
      |                          ^~~~~~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/cast_struct.c:46:51: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/cast_struct.c:73:35: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   73 |   map_int_bool_put(&_t1, "title", "hi");
      |                                   ^~~~
      |                                   |
      |                                   char *
/workspace/mochi/tests/machine/x/c/cast_struct.c:46:60: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~

   1: #include <stdio.h>
